package ch.zhaw.digitalfootprintexplorer.model

enum class AppCategory {
    VIDEO_STREAMING,
    AUDIO_STREAMING,
    SOCIAL_MEDIA,
    MESSAGING,
    ARTIFICIAL_INTELLIGENCE,
    E_MAIL,
    VIDEO_CALL,
    GAMING,
    NAVIGATION,
    MISCELLANEOUS
}
