package ch.zhaw.digitalfootprintexplorer.model

import ch.zhaw.digitalfootprintexplorer.model.input.AppUsageInput
import ch.zhaw.digitalfootprintexplorer.model.input.BackgroundInput
import ch.zhaw.digitalfootprintexplorer.model.input.DisplayInput
import ch.zhaw.digitalfootprintexplorer.model.output.CategoryEmission
import ch.zhaw.digitalfootprintexplorer.model.output.EmissionResult

/**
 * Calculates the CO2 footprint of smartphone usage.
 *
 * Model formula (Thesis Ch. 3):
 *   GHG_total = GHG_appUsage + GHG_display + GHG_background
 *
 * @param userEmissionFactor Emission factor of the user's electricity mix [kgCO2e/kWh].
 *   Default: Swiss electricity mix.
 */
class EmissionsCalculator(
    private val userEmissionFactor: Double = ModelConstants.EF_SWISS
) {

    fun calculate(
        appUsage: List<AppUsageInput>,
        display: DisplayInput,
        background: BackgroundInput
    ): EmissionResult {
        val categoryBreakdown = calculateAppUsage(appUsage)
        return EmissionResult(
            ghgAppUsage = categoryBreakdown.fold(0.0) { acc, c -> acc + c.ghgTotal },
            ghgDisplay = calculateDisplay(display),
            ghgBackground = calculateBackground(background),
            categoryBreakdown = categoryBreakdown
        )
    }

    /**
     * Block 1: App Usage
     *
     * GHG_appUsage = Σ_k [GHG_device,k + GHG_network,k + GHG_backend,k]
     */

    private fun calculateAppUsage(metrics: List<AppUsageInput>): List<CategoryEmission> {
        /* Aggregate by category */
        return metrics
            .groupBy { it.appCategory }
            .map { (category, entries) ->
                val totalTimeH = entries.sumOf { it.totalForegroundTime } / 3600.0
                val totalWifiGB = entries.fold(0.0) { acc, m -> acc + m.wifiBytes.valueOrDefault() } / 1_000_000_000.0
                val totalCellularGB = entries.fold(0.0) { acc, m -> acc + m.cellularBytes.valueOrDefault() } / 1_000_000_000.0

                CategoryEmission(
                    category = category,
                    ghgDevice = calculateDevice(category, totalTimeH),
                    ghgNetwork = calculateNetwork(totalWifiGB, totalCellularGB),
                    ghgBackend = calculateBackend(category, totalWifiGB + totalCellularGB)
                )
            }
    }

    /**
     * GHG_device,k = P_device,k \[W] * t_k \[h] / 1000 * (1/η) * EF_user
     */
    private fun calculateDevice(category: AppCategory, timeH: Double): Double {
        val pWatt = ModelConstants.P_DEVICE_BY_CATEGORY[category]
            ?: ModelConstants.P_DEVICE_BY_CATEGORY[AppCategory.MISCELLANEOUS]!!
        val energyKwh = pWatt * timeH / 1000.0
        return energyKwh / ModelConstants.CHARGING_EFFICIENCY * userEmissionFactor
    }

    /**
     * GHG_network,k = (wifiGB * I_WIFI + cellularGB * I_CELLULAR) * EF_global
     *
     */
    private fun calculateNetwork(wifiGB: Double, cellularGB: Double): Double {
        val energyKwh =
            wifiGB * ModelConstants.NETWORK_INTENSITY_WIFI +
            cellularGB * ModelConstants.NETWORK_INTENSITY_CELLULAR
        return energyKwh * ModelConstants.EF_GLOBAL
    }

    /**
     * GHG_backend,k = totalDataGB * I_backend * factor_k * EF_global
     *
     */
    private fun calculateBackend(category: AppCategory, totalDataGB: Double): Double {
        val factor = ModelConstants.BACKEND_INTENSITY_FACTOR_BY_CATEGORY[category] ?: 1.0
        return totalDataGB * ModelConstants.BACKEND_INTENSITY_GB * factor * ModelConstants.EF_GLOBAL
    }

    /**
     * Block 2: Display
     *
     * E_display \[Wh] = P_display \[W] * Σ_i (B̃_i * Δt_i \[h])
     * GHG_display = E_display/1000 * (1/η) * EF_user
     */

    private fun calculateDisplay(display: DisplayInput): Double {
        val energyWh = ModelConstants.P_DISPLAY_MAX_WATT *
            display.intervals.fold(0.0) { acc, i -> acc + i.normalizedBrightness * i.durationH }
        val energyKwh = energyWh / 1000.0
        return energyKwh / ModelConstants.CHARGING_EFFICIENCY * userEmissionFactor
    }

    /**
     * Block 3: Background processes
     *
     * GHG_background = Σ_p (P_p \[W] * t_p \[h] / 1000 * (1/η) * EF_user)
     */

    private fun calculateBackground(background: BackgroundInput): Double {
        return background.activeProcesses.fold(0.0) { acc, proc ->
            val pWatt = ModelConstants.P_BACKGROUND_BY_PROCESS[proc.process] ?: 0.0
            val energyKwh = pWatt * proc.durationH / 1000.0
            acc + energyKwh / ModelConstants.CHARGING_EFFICIENCY * userEmissionFactor
        }
    }
}
