package ch.zhaw.digitalfootprintexplorer.model

enum class GardenState {
    FLOURISHING,
    GROWING,
    STABLE,
    WILTING,
    WITHERED
}