package ch.zhaw.digitalfootprintexplorer.model

enum class NetworkType {
    WIFI,
    CELLULAR
}
